# grow_auto_control

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  _probe_cp2.py  _smoke_exe.py  _smoke_real_hw.py  _verify_cp3_live.py  build.py  grow_control.spec  main.py  pyproject.toml
app/: __main__.py
app/core/: config.py  logging.py
app/gui/: main_window.py
app/gui/widgets/: actuator_panel.py  led_panel.py  log_panel.py  sensor_panel.py  settings_panel.py
app/hardware/: base.py  mock_board.py  serial_board.py
app/services/: controller.py  led_scheduler.py  settings_store.py
app/utils/: paths.py
arduino/: SETUP.md
arduino/grow_control/: grow_control.ino
