[project]
name = "grow-auto-control"
version = "0.1.0"
description = "Automated microgreens vertical farming control system."
authors = [
    {name = "cttturthroat",email = "yumesychev7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "pydantic[mypy] (>=2.13.3,<3.0.0)",
    "pyserial (>=3.5,<4)",
    "PySide6 (>=6.8,<7)",
    "qasync (>=0.28,<1)",
    "tzdata (>=2024.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "loguru-mypy (>=0.0.4,<0.0.5)",
    "ruff (>=0.15.12,<0.16.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "pyinstaller (>=6.0,<7)",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "PLC", "N", "SIM", "PERF", "TID", "RUF"]
ignore = ["E501", "UP046", "B008", "N802"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
warn_unused_ignores = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
mypy_path = ["."]
files = ["app"]

disallow_any_explicit = true

plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["serial", "serial.tools", "serial.tools.list_ports"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["qasync"]
ignore_missing_imports = true